k8s/overlays/observability/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-operations-dashboard
  namespace: kubernetes-operations-dashboard
spec:
  replicas: 2
